# extension_template

./: README.rst  setup.cfg
docs/src/: index.rst
src/myextension/: __init__.py  extension.py
