[metadata]
name = myextension
version = file: src/myextension/VERSION
description = PyMoDAQ extension for blablab
long_description = file: readme.rst
license = MIT
licence_file = LICENSE
url = http://pymodaq.cnrs.fr
author = Sébastien Weber
author_email = sebastien.weber@cemes.fr
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
py_module = pymodaq_femto
python_requires = >=3.6, <3.9
install_requires=
    pymodaq

package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
pymodaq.extensions =
    myext = myextension


